`docs(shop):` add doc to shops domain
