# internal/app/controller/shop_controller.go
@@ -23,6 +23,14 @@ func MountShopRoutes(r *gin.RouterGroup, shopSvc service.IShopService) {
 	shopR.DELETE("/:id", shopCtr.DeleteShop)
 }
 
+//	@Tags			Shops
+//	@Summary		Fetch All Shops
+//	@Description	Fetch All Shops From Database
+//	@Produce		json
+//	@Success		200	{object}	ginlib.Response{data=[]domain.Shop}	"OK"
+//	@Failure		500	{object}	ginlib.Response							"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/api/v1/shops [get]
 func (c *shopController) FetchAllShops(ctx *gin.Context) {
 	var (
 		code    = 500
@@ -47,6 +55,16 @@ func (c *shopController) FetchAllShops(ctx *gin.Context) {
 
 }
 
+//	@Tags			Shops
+//	@Summary		Fetch Shop By ID
+//	@Description	Fetch Shop By ID From DB
+//	@Produce		json
+//	@Param			id	path		string								true	"Shop ID"
+//	@Success		200	{object}	ginlib.Response{data=domain.Shop}	"OK"
+//	@Failure		404	{object}	ginlib.Response{data=domain.Shop}	"Item not found"
+//	@Failure		500	{object}	ginlib.Response						"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/api/v1/shops/{id} [get]
 func (c *shopController) FetchShopByID(ctx *gin.Context) {
 	var (
 		code    = 500
@@ -73,6 +91,16 @@ func (c *shopController) FetchShopByID(ctx *gin.Context) {
 	message = "successfully fetch shop by id"
 }
 
+//	@Tags			Shops
+//	@Summary		Register Shop
+//	@Description	Register Shop to System
+//	@Produce		json
+//	@Param			ShopPayload	body		dto.ShopRequest	true	"Shop Register Payload"
+//	@Success		200				{object}	ginlib.Response		"OK"
+//	@Failure		409				{object}	ginlib.Response		"Username already exists"
+//	@Failure		500				{object}	ginlib.Response		"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/api/v1/shops [post]
 func (c *shopController) CreateShop(ctx *gin.Context) {
 	var (
 		code    = 400
@@ -101,6 +129,18 @@ func (c *shopController) CreateShop(ctx *gin.Context) {
 	message = "successfully create new shop"
 }
 
+//	@Tags			Shops
+//	@Summary		Update Shop
+//	@Description	Update Existing Shop
+//	@Produce		json
+//	@Param			ShopPayload	body		dto.ShopRequest					true	"Shop Register Payload"
+//	@Param			id				path		string								true	"Shop ID"
+//	@Success		200				{object}	ginlib.Response						"OK"
+//	@Failure		404				{object}	ginlib.Response{data=domain.Shop}	"Item not found"
+//	@Failure		409				{object}	ginlib.Response						"Username already exists"
+//	@Failure		500				{object}	ginlib.Response						"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/api/v1/shops/{id} [put]
 func (c *shopController) UpdateShop(ctx *gin.Context) {
 	var (
 		code    = 400
@@ -130,6 +170,16 @@ func (c *shopController) UpdateShop(ctx *gin.Context) {
 	message = "successfully update shop"
 }
 
+//	@Tags			Shops
+//	@Summary		Delete Shop
+//	@Description	Delete Existing Shop
+//	@Produce		json
+//	@Param			id	path		string			true	"Shop ID"
+//	@Success		200	{object}	ginlib.Response	"OK"
+//	@Failure		404	{object}	ginlib.Response	"Item not found"
+//	@Failure		500	{object}	ginlib.Response	"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/api/v1/shops/{id} [delete]
 func (c *shopController) DeleteShop(ctx *gin.Context) {
 	var (
 		code    = 400
